# pandas_csv_sniffer

./: README.md  setup.cfg  setup.py
csv_sniffer/: __init__.py  csv_sniffer.py
notebook/: CSVSniffer.ipynb  mnist.ipynb  nyt_taxis.ipynb
src/csv_sniffer/: csv_sniffer.py
tests/: test_00_csv_sniffer.py
