[metadata]
name = csv_sniffer-jdfekete
version = 0.1
author = Jean-Daniel Fekete
author_email = Jean-Daniel.Fekete@inria.fr
license = MIT
description = Jupyter notebook GUI to pandas.csv_read
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdfekete/pandas_csv_sniffer
project_urls =
    Bug Tracker = https://github.com/jdfekete/pandas_csv_sniffer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    fsspec
    ipywidgets
setup_requires =
    nose
test_suite = nose.collector

[options.packages.find]
where = src

[nosetests]
tests = tests
